Mise a jour avec fonctions liées aux customers

--- a/Agenda/Agenda/Views/Broker/Edit.cshtml
+++ b/Agenda/Agenda/Views/Broker/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Edit Broker";
 }
 
-<h2> Edit broker</h2>
+<h2> Edit Broker</h2>
 
 <div asp-validation-summary="All"></div>
 <form method="POST">
