--- a/Agenda/Agenda/Views/Shared/_Layout.cshtml
+++ b/Agenda/Agenda/Views/Shared/_Layout.cshtml
@@ -54,13 +54,16 @@
                       <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Broker" asp-action="Edit">Edit Broker</a>
                       </li>
-
                       <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Index">Add Customer</a>
+                        <a class="nav-link active text-dark" asp-area="" asp-controller="Customer" asp-action="Index">All customers</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Add">Add Customer</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Edit">Edit Customer</a>
                       </li>
+
                     </ul>
                 </div>
                 <div class="col-md-9">
