Réparation de l'ajout broker et customer (Auto increment ne fonctionnait pas)

--- a/Agenda/Agenda/Views/Customer/Details.cshtml
+++ b/Agenda/Agenda/Views/Customer/Details.cshtml
@@ -22,6 +22,6 @@
 </table>
     <div>
         <a class="btn btn-primary" asp-controller="Customer" asp-action="Edit" asp-route-id="@Model.IdCustomer">Modifier</a>
-		<a class="btn btn-danger" asp-controller="Customer" asp-action="Remove" asp-route-id="@Model.IdCustomer">Supprimer</a><
+		<button class="btn btn-danger" asp-controller="Customer" asp-action="Remove" asp-route-id="@Model.IdCustomer">Supprimer</button>
         <a class="btn btn-primary" asp-controller="Customer" asp-action="Index">Retour</a>
     </div>
