--- a/Agenda/Agenda/Views/Broker/Details.cshtml
+++ b/Agenda/Agenda/Views/Broker/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Broker
 @{
-	ViewData["Title"] = "Informations Broker";
+	ViewData["Title"] = "Informations Courtier";
 }
 
 
@@ -11,11 +11,11 @@
 	</thead>
 	<tbody>
 		<tr>
-			<th>Lastname</th><td>@Model.Lastname</td>
+			<th>Nom</th><td>@Model.Lastname</td>
 		</tr>
-		<tr><th>Firstame</th><td>@Model.Firstname</td></tr>
-		<tr><th>Email</th><td>@Model.Mail</td></tr>
-		<tr><th>Phone Number</th><td>@Model.PhoneNumber</td></tr>
+		<tr><th>Prénom</th><td>@Model.Firstname</td></tr>
+		<tr><th><i class="bi bi-at"></i> Email</th><td>@Model.Mail</td></tr>
+		<tr><th><i class="bi bi-telephone-fill"></i> Téléphone</th><td>@Model.PhoneNumber</td></tr>
 	</tbody>
 </table>
     <div>
