--- a/Agenda/Agenda/Views/Customer/Add.cshtml
+++ b/Agenda/Agenda/Views/Customer/Add.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Customer
 @{
-    ViewData["Title"] = "New Customer";
+    ViewData["Title"] = "Nouveau client";
 }
-<h2> Add a new customer</h2>
+<h2> Nouveau client</h2>
 
 <div asp-validation-summary="All"></div>
 <form method="POST">
