--- a/Agenda/Agenda/Views/Customer/Edit.cshtml
+++ b/Agenda/Agenda/Views/Customer/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Customer
 @{
-    ViewData["Title"] = "Edit Customer";
+    ViewData["Title"] = "Modifier client";
 }
 
-<h2> Edit Customer</h2>
+<h2> Modifier client</h2>
 
 <div asp-validation-summary="All"></div>
 <form method="POST">
