--- a/Agenda/Agenda/Views/Appointment/Index.cshtml
+++ b/Agenda/Agenda/Views/Appointment/Index.cshtml
@@ -1,3 +1,27 @@
-﻿@{
+﻿@model IEnumerable<Appointment>
+@{
 	ViewData["Title"] = "Index rdv";
 }
+
+<h2>Prochains rendez-vous</h2>
+<table class="table" style="width:100%">
+	<thead>
+		<tr>
+			<th>Rendez-vous</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach(var rdv in Model)
+		{
+			<tr>
+				<td asp-route-sortOrder="@rdv.DateHour"><i class="bi bi-person-fill"></i> <b>@rdv.DateHour </b><br />
+
+					</td>
+				<td><a class="btn btn-primary" asp-controller="Appointment" asp-action="Details" asp-route-id="@rdv.IdAppointment">Details</a></td>
+				<td><a class="btn btn-danger" asp-controller="Appointment" asp-action="Remove" asp-route-id="@rdv.IdAppointment">Supprimer</a></td>
+			</tr>
+		}
+	</tbody>
+</table>
+
