--- a/Agenda/Agenda/Views/Broker/Index.cshtml
+++ b/Agenda/Agenda/Views/Broker/Index.cshtml
@@ -7,9 +7,12 @@
 	<a type="button" class="btn btn-primary"  asp-controller="Broker" asp-action="Add"><i class="bi bi-plus-circle"></i>Ajouter un article</a>
 </div>*@
 
+<div class="d-flex justify-content-between mt-3">
+	<h4>Liste des courtiers</h4>
+	<a classasp-all-route-data="mr-2"-controller="Broker" asp-action="Add" style="text-decoration:none"><h6><i class="bi bi-plus-lg"></i>Nouveau courtier</h6></a>
+</div>
 
-<h2>Liste des brokers</h2>
-<table class="table" style="width:100%">
+<table class="table mt-2" style="width:100%">
 	<thead>
 		<tr>
 			<th>Identité</th>
@@ -20,10 +23,9 @@
 		@foreach( var broker in Model)
 		{
 			<tr>
-				<td>@broker.Lastname @broker.Firstname</td>
+				<td> <i class="bi bi-person-fill"></i>@broker.Lastname @broker.Firstname</td>
 				<td><a class="btn btn-primary" asp-controller="Broker" asp-action="Details" asp-route-id="@broker.IdBroker">Details</a></td>
 				<td><a class="btn btn-primary" asp-controller="Broker" asp-action="Edit" asp-route-id="@broker.IdBroker">Modifier</a></td>
-				<td><a class="btn btn-danger" asp-controller="Broker" asp-action="Delete" asp-route-id="@broker.IdBroker">Supprimer</a></td>
 			</tr>
 		}
 	</tbody>
