--- a/Agenda/Agenda/Views/Customer/Remove.cshtml
+++ b/Agenda/Agenda/Views/Customer/Remove.cshtml
@@ -1,44 +1,37 @@
 ﻿@model Customer
 @{
-    ViewData["Title"] = "Remove Customer";
+    ViewData["Title"] = "Supprimer client";
 }
 
-<h2> Supprimer Customer</h2>
+<h2> Supprimer client</h2>
 
 <div class="alert alert-danger" role="alert">Voulez-vous vraiment supprimer le client?</div>
 
-<div asp-validation-summary="All"></div>
 <form method="POST">
     <div class="mb-3">
         <label asp-for="Firstname"></label>
         <input asp-for="Firstname" class="form-control" disabled/>
-        <span asp-validation-for="Firstname" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="Lastname"></label>
         <input asp-for="Lastname" class="form-control" disabled/>
-        <span asp-validation-for="Lastname" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="Mail"></label>
         <input asp-for="Mail" class="form-control" disabled/>
-        <span asp-validation-for="Mail" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="PhoneNumber"></label>
         <input asp-for="PhoneNumber" class="form-control" disabled/>
-        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="Budget"></label>
         <input asp-for="Budget" class="form-control" disabled/>
-        <span asp-validation-for="Budget" class="text-danger"></span>
     </div>
     <div>
         <input type="submit" class="btn btn-primary" style="width:100px" value="Supprimer">
         <a class="btn btn-primary" asp-controller="Customer" asp-action="Index">Annuler</a>
     </div>
-
 </form>
 
 
