--- a/Agenda/Agenda/Views/Shared/_Layout.cshtml
+++ b/Agenda/Agenda/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Agenda.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 </head>
 <body>
-    <header>
 @*        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Agenda</a>
@@ -38,35 +38,39 @@
                 </div>
             </div>
         </nav>*@
-    </header>
     <div class="container-fluid">
         <main role="main" class="pb-3">
-            <h3>Home</h3>
+            
             <div class="row">
-                <div class="col-md-3">
-                    <ul class="nav flex-column">
+                @*Navbar verticale*@
+                <div class="left col-md-2 text-center">
+                    <h3><a asp-controller="Home" asp-action="Index" style="list-style:none;">Accueil</a></h3>
+                    <hr />
+                    <ul class="nav flex-column text-white">
                       <li class="nav-item">
-                        <a class="nav-link active text-dark" asp-area="" asp-controller="Broker" asp-action="Index">All brokers</a>
+                        <a class="nav-link active text-dark" asp-area="" asp-controller="Broker" asp-action="Index">Liste courtiers</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active text-dark" asp-area="" asp-controller="Broker" asp-action="Add">New Broker</a>
+                        <a class="nav-link active text-dark" asp-area="" asp-controller="Broker" asp-action="Add"> <i class="bi bi-plus-lg"></i> Nouveau courtier</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Broker" asp-action="Edit">Edit Broker</a>
+                        <a class="nav-link active text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Liste clients</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active text-dark" asp-area="" asp-controller="Customer" asp-action="Index">All customers</a>
+                        <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Add"><i class="bi bi-plus-lg"></i> Nouveau client</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Add">Add Customer</a>
+                        <a class="nav-link" asp-area="" asp-controller="Appointment" asp-action="Add"><i class="bi bi-plus-lg"></i>Nouveau rdv</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Edit">Edit Customer</a>
+                       <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Appointment" asp-action="Index">Prochains rdv</a>
                       </li>
-
                     </ul>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-10">
+                    <div class="row mt-3">
+                       <h1 style="text-align:center">AGENDA COURTIERS</h1> 
+                    </div>
                     @RenderBody()
                 </div>
             </div>
