--- a/Agenda/Agenda/Views/Broker/Remove.cshtml
+++ b/Agenda/Agenda/Views/Broker/Remove.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Broker
 @{
-    ViewData["Title"] = "New Broker";
+    ViewData["Title"] = "Supprimer courtier";
 }
 
 <h2> Add a new broker</h2>
