--- a/Agenda/Agenda/Views/Customer/Index.cshtml
+++ b/Agenda/Agenda/Views/Customer/Index.cshtml
@@ -3,7 +3,13 @@
 	ViewData["Title"] = "Index clients";
 }
 
-<h2>Liste des clients</h2>
+
+
+<div class="d-flex justify-content-between mt-3">
+	<h2>Liste des clients</h2>
+	<a classasp-all-route-data="mr-2"-controller="Customer" asp-action="Add" style="text-decoration:none"><h6><i class="bi bi-plus-lg"></i>Nouveau client</h6></a>
+</div>
+
 <table class="table" style="width:100%">
 	<thead>
 		<tr>
@@ -16,7 +22,7 @@
 		{
 			<tr>
 				<td> <i class="bi bi-person-fill"></i> @customer.Lastname @customer.Firstname</td>
-				<td><a class="btn btn-primary" asp-controller="Customer" asp-action="Details" asp-route-id="@customer.IdCustomer">Details</a></td>
+				<td><a class="btn btn-primary" asp-controller="Customer" asp-action="ProfilCustomer" asp-route-id="@customer.IdCustomer">Details</a></td>
 				<td><a class="btn btn-primary" asp-controller="Customer" asp-action="Edit" asp-route-id="@customer.IdCustomer">Modifier</a></td>
 				<td><a class="btn btn-danger" asp-controller="Customer" asp-action="Remove" asp-route-id="@customer.IdCustomer">Supprimer</a></td>
 			</tr>
